MiniC2324/miniC.output
Terminals unused in grammar

    EMPIEZA
    REAL


State 76 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    3 $@2: ε

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON

    5 $@3: ε

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON
    7             | ε

    8 identifier_list: asig
    9                | identifier_list COMA asig

   10 asig: ID
   11     | ID ASIG_OP expression

   12 statement_list: statement_list statement
   13               | ε

   14 statement: ID ASIG_OP expression SEMICOLON
   15          | A_LLAVE statement_list C_LLAVE
   16          | SI A_PAREN expression C_PAREN statement SINO statement
   17          | SI A_PAREN expression C_PAREN statement
   18          | MIENTRAS A_PAREN expression C_PAREN statement
   19          | HACER statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON
   20          | ESCRIBIR print_list SEMICOLON
   21          | LEER read_list SEMICOLON
   22          | error SEMICOLON

   23 print_list: print_item
   24           | print_list COMA print_item

   25 print_item: expression
   26           | STRING

   27 read_list: ID
   28          | read_list COMA ID

   29 expression: expression MAS_OP expression
   30           | expression MENOS_OP expression
   31           | expression MULT_OP expression
   32           | expression DIV_OP expression
   33           | MENOS_OP expression
   34           | A_PAREN expression C_PAREN
   35           | ID
   36           | NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256) 22
    EMPIEZA (258)
    LEER (259) 21
    ESCRIBIR (260) 20
    A_PAREN (261) 2 16 17 18 19 34
    C_PAREN (262) 2 16 17 18 19 34
    SEMICOLON (263) 4 6 14 19 20 21 22
    COMA (264) 9 24 28
    ASIG_OP (265) 11 14
    MAS_OP (266) 29
    MENOS_OP (267) 30 33
    A_LLAVE (268) 2 15
    C_LLAVE (269) 2 15
    VAR (270) 4
    CONST (271) 6
    SI (272) 16 17
    SINO (273) 16
    MIENTRAS (274) 18 19
    MULT_OP (275) 31
    DIV_OP (276) 32
    REAL (277)
    HACER (278) 19
    STRING <lexema> (279) 26
    ID <lexema> (280) 2 10 11 14 27 28 35
    NUM <lexema> (281) 36
    UMENOS (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 2
        on right: 0
    $@1 (30)
        on left: 1
        on right: 2
    declarations <codigo> (31)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (32)
        on left: 3
        on right: 4
    $@3 (33)
        on left: 5
        on right: 6
    identifier_list <codigo> (34)
        on left: 8 9
        on right: 4 6 9
    asig <codigo> (35)
        on left: 10 11
        on right: 8 9
    statement_list <codigo> (36)
        on left: 12 13
        on right: 2 12 15
    statement <codigo> (37)
        on left: 14 15 16 17 18 19 20 21 22
        on right: 12 16 17 18 19
    print_list <codigo> (38)
        on left: 23 24
        on right: 20 24
    print_item <codigo> (39)
        on left: 25 26
        on right: 23 24
    read_list <codigo> (40)
        on left: 27 28
        on right: 21 28
    expression <codigo> (41)
        on left: 29 30 31 32 33 34 35 36
        on right: 11 14 16 17 18 19 25 29 30 31 32 33 34


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    ID  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 ID • A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE

    A_PAREN  shift, and go to state 5


State 5

    2 program: $@1 ID A_PAREN • C_PAREN A_LLAVE declarations statement_list C_LLAVE

    C_PAREN  shift, and go to state 6


State 6

    2 program: $@1 ID A_PAREN C_PAREN • A_LLAVE declarations statement_list C_LLAVE

    A_LLAVE  shift, and go to state 7


State 7

    2 program: $@1 ID A_PAREN C_PAREN A_LLAVE • declarations statement_list C_LLAVE

    $default  reduce using rule 7 (declarations)

    declarations  go to state 8


State 8

    2 program: $@1 ID A_PAREN C_PAREN A_LLAVE declarations • statement_list C_LLAVE
    4 declarations: declarations • VAR $@2 identifier_list SEMICOLON
    6             | declarations • CONST $@3 identifier_list SEMICOLON

    VAR    shift, and go to state 9
    CONST  shift, and go to state 10

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 11


State 9

    4 declarations: declarations VAR • $@2 identifier_list SEMICOLON

    $default  reduce using rule 3 ($@2)

    $@2  go to state 12


State 10

    6 declarations: declarations CONST • $@3 identifier_list SEMICOLON

    $default  reduce using rule 5 ($@3)

    $@3  go to state 13


State 11

    2 program: $@1 ID A_PAREN C_PAREN A_LLAVE declarations statement_list • C_LLAVE
   12 statement_list: statement_list • statement

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    C_LLAVE   shift, and go to state 18
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 23


State 12

    4 declarations: declarations VAR $@2 • identifier_list SEMICOLON

    ID  shift, and go to state 24

    identifier_list  go to state 25
    asig             go to state 26


State 13

    6 declarations: declarations CONST $@3 • identifier_list SEMICOLON

    ID  shift, and go to state 24

    identifier_list  go to state 27
    asig             go to state 26


State 14

   22 statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 28


State 15

   21 statement: LEER • read_list SEMICOLON

    ID  shift, and go to state 29

    read_list  go to state 30


State 16

   20 statement: ESCRIBIR • print_list SEMICOLON

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    STRING    shift, and go to state 33
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    print_list  go to state 36
    print_item  go to state 37
    expression  go to state 38


State 17

   15 statement: A_LLAVE • statement_list C_LLAVE

    $default  reduce using rule 13 (statement_list)

    statement_list  go to state 39


State 18

    2 program: $@1 ID A_PAREN C_PAREN A_LLAVE declarations statement_list C_LLAVE •

    $default  reduce using rule 2 (program)


State 19

   16 statement: SI • A_PAREN expression C_PAREN statement SINO statement
   17          | SI • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 40


State 20

   18 statement: MIENTRAS • A_PAREN expression C_PAREN statement

    A_PAREN  shift, and go to state 41


State 21

   19 statement: HACER • statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 42


State 22

   14 statement: ID • ASIG_OP expression SEMICOLON

    ASIG_OP  shift, and go to state 43


State 23

   12 statement_list: statement_list statement •

    $default  reduce using rule 12 (statement_list)


State 24

   10 asig: ID •
   11     | ID • ASIG_OP expression

    ASIG_OP  shift, and go to state 44

    $default  reduce using rule 10 (asig)


State 25

    4 declarations: declarations VAR $@2 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 45
    COMA       shift, and go to state 46


State 26

    8 identifier_list: asig •

    $default  reduce using rule 8 (identifier_list)


State 27

    6 declarations: declarations CONST $@3 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMA asig

    SEMICOLON  shift, and go to state 47
    COMA       shift, and go to state 46


State 28

   22 statement: error SEMICOLON •

    $default  reduce using rule 22 (statement)


State 29

   27 read_list: ID •

    $default  reduce using rule 27 (read_list)


State 30

   21 statement: LEER read_list • SEMICOLON
   28 read_list: read_list • COMA ID

    SEMICOLON  shift, and go to state 48
    COMA       shift, and go to state 49


State 31

   34 expression: A_PAREN • expression C_PAREN

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 50


State 32

   33 expression: MENOS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 51


State 33

   26 print_item: STRING •

    $default  reduce using rule 26 (print_item)


State 34

   35 expression: ID •

    $default  reduce using rule 35 (expression)


State 35

   36 expression: NUM •

    $default  reduce using rule 36 (expression)


State 36

   20 statement: ESCRIBIR print_list • SEMICOLON
   24 print_list: print_list • COMA print_item

    SEMICOLON  shift, and go to state 52
    COMA       shift, and go to state 53


State 37

   23 print_list: print_item •

    $default  reduce using rule 23 (print_list)


State 38

   25 print_item: expression •
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57

    $default  reduce using rule 25 (print_item)


State 39

   12 statement_list: statement_list • statement
   15 statement: A_LLAVE statement_list • C_LLAVE

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    C_LLAVE   shift, and go to state 58
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 23


State 40

   16 statement: SI A_PAREN • expression C_PAREN statement SINO statement
   17          | SI A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 59


State 41

   18 statement: MIENTRAS A_PAREN • expression C_PAREN statement

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 60


State 42

   19 statement: HACER statement • MIENTRAS A_PAREN expression C_PAREN SEMICOLON

    MIENTRAS  shift, and go to state 61


State 43

   14 statement: ID ASIG_OP • expression SEMICOLON

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 62


State 44

   11 asig: ID ASIG_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 63


State 45

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 46

    9 identifier_list: identifier_list COMA • asig

    ID  shift, and go to state 24

    asig  go to state 64


State 47

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON •

    $default  reduce using rule 6 (declarations)


State 48

   21 statement: LEER read_list SEMICOLON •

    $default  reduce using rule 21 (statement)


State 49

   28 read_list: read_list COMA • ID

    ID  shift, and go to state 65


State 50

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression
   34           | A_PAREN expression • C_PAREN

    C_PAREN   shift, and go to state 66
    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57


State 51

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression
   33           | MENOS_OP expression •

    $default  reduce using rule 33 (expression)


State 52

   20 statement: ESCRIBIR print_list SEMICOLON •

    $default  reduce using rule 20 (statement)


State 53

   24 print_list: print_list COMA • print_item

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    STRING    shift, and go to state 33
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    print_item  go to state 67
    expression  go to state 38


State 54

   29 expression: expression MAS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 68


State 55

   30 expression: expression MENOS_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 69


State 56

   31 expression: expression MULT_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 70


State 57

   32 expression: expression DIV_OP • expression

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 71


State 58

   15 statement: A_LLAVE statement_list C_LLAVE •

    $default  reduce using rule 15 (statement)


State 59

   16 statement: SI A_PAREN expression • C_PAREN statement SINO statement
   17          | SI A_PAREN expression • C_PAREN statement
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 72
    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57


State 60

   18 statement: MIENTRAS A_PAREN expression • C_PAREN statement
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 73
    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57


State 61

   19 statement: HACER statement MIENTRAS • A_PAREN expression C_PAREN SEMICOLON

    A_PAREN  shift, and go to state 74


State 62

   14 statement: ID ASIG_OP expression • SEMICOLON
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    SEMICOLON  shift, and go to state 75
    MAS_OP     shift, and go to state 54
    MENOS_OP   shift, and go to state 55
    MULT_OP    shift, and go to state 56
    DIV_OP     shift, and go to state 57


State 63

   11 asig: ID ASIG_OP expression •
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57

    $default  reduce using rule 11 (asig)


State 64

    9 identifier_list: identifier_list COMA asig •

    $default  reduce using rule 9 (identifier_list)


State 65

   28 read_list: read_list COMA ID •

    $default  reduce using rule 28 (read_list)


State 66

   34 expression: A_PAREN expression C_PAREN •

    $default  reduce using rule 34 (expression)


State 67

   24 print_list: print_list COMA print_item •

    $default  reduce using rule 24 (print_list)


State 68

   29 expression: expression • MAS_OP expression
   29           | expression MAS_OP expression •
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    MULT_OP  shift, and go to state 56
    DIV_OP   shift, and go to state 57

    $default  reduce using rule 29 (expression)


State 69

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   30           | expression MENOS_OP expression •
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    MULT_OP  shift, and go to state 56
    DIV_OP   shift, and go to state 57

    $default  reduce using rule 30 (expression)


State 70

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   31           | expression MULT_OP expression •
   32           | expression • DIV_OP expression

    $default  reduce using rule 31 (expression)


State 71

   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression
   32           | expression DIV_OP expression •

    $default  reduce using rule 32 (expression)


State 72

   16 statement: SI A_PAREN expression C_PAREN • statement SINO statement
   17          | SI A_PAREN expression C_PAREN • statement

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 76


State 73

   18 statement: MIENTRAS A_PAREN expression C_PAREN • statement

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 77


State 74

   19 statement: HACER statement MIENTRAS A_PAREN • expression C_PAREN SEMICOLON

    A_PAREN   shift, and go to state 31
    MENOS_OP  shift, and go to state 32
    ID        shift, and go to state 34
    NUM       shift, and go to state 35

    expression  go to state 78


State 75

   14 statement: ID ASIG_OP expression SEMICOLON •

    $default  reduce using rule 14 (statement)


State 76

   16 statement: SI A_PAREN expression C_PAREN statement • SINO statement
   17          | SI A_PAREN expression C_PAREN statement •

    SINO  shift, and go to state 79

    SINO      [reduce using rule 17 (statement)]
    $default  reduce using rule 17 (statement)


State 77

   18 statement: MIENTRAS A_PAREN expression C_PAREN statement •

    $default  reduce using rule 18 (statement)


State 78

   19 statement: HACER statement MIENTRAS A_PAREN expression • C_PAREN SEMICOLON
   29 expression: expression • MAS_OP expression
   30           | expression • MENOS_OP expression
   31           | expression • MULT_OP expression
   32           | expression • DIV_OP expression

    C_PAREN   shift, and go to state 80
    MAS_OP    shift, and go to state 54
    MENOS_OP  shift, and go to state 55
    MULT_OP   shift, and go to state 56
    DIV_OP    shift, and go to state 57


State 79

   16 statement: SI A_PAREN expression C_PAREN statement SINO • statement

    error     shift, and go to state 14
    LEER      shift, and go to state 15
    ESCRIBIR  shift, and go to state 16
    A_LLAVE   shift, and go to state 17
    SI        shift, and go to state 19
    MIENTRAS  shift, and go to state 20
    HACER     shift, and go to state 21
    ID        shift, and go to state 22

    statement  go to state 81


State 80

   19 statement: HACER statement MIENTRAS A_PAREN expression C_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 82


State 81

   16 statement: SI A_PAREN expression C_PAREN statement SINO statement •

    $default  reduce using rule 16 (statement)


State 82

   19 statement: HACER statement MIENTRAS A_PAREN expression C_PAREN SEMICOLON •

    $default  reduce using rule 19 (statement)
